# SkyLens

./: .gitignore  APP_ICON_OPTIONS.md  BUG_FIXES_COMPLETED.md  BUILD_SUCCESS.md  BUILD_SUMMARY.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  ISSUES_FOUND.md  MILESTONE_STATUS.md  NEXT_STEPS.md  PLAY_STORE_SUBMISSION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  TESTING.md  UI_TESTING_REPORT.md  WAVES_STATUS.md  code_review_recommendations.md
.claude/: settings.json  settings.local.json
android/: .gitignore  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
backend/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
backend/migrations/: 001_create_users.sql  002_create_airports.sql  003_create_landmarks.sql  004_create_trips.sql  005_create_offline_packs.sql  006_create_pack_jobs.sql
backend/src/: error.rs  main.rs
backend/src/geo/: mod.rs  tests.rs
backend/src/handlers/: airports.rs  health.rs  landmarks.rs  mod.rs  offline_packs.rs  tests.rs  trips.rs
backend/src/models/: mod.rs
docs/: ANDROID_SDK_SETUP.md  API_INTEGRATION.md  BUILD_GUIDE.md  JAVA_SETUP.md  PRIVACY_POLICY.md  UI_MOCKUPS.md
docs/migrations/: 001_create_users.sql  002_create_airports.sql  003_create_landmarks.sql  004_create_trips.sql
scripts/: generate_sample_data.py  import_airports.py  import_landmarks.py  import_landmarks_enhanced.py  import_landmarks_v2.py  quick_setup_guide.sh  verify_environment.sh
(+86 files in other folders)
