[package]
name = "skylens-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"] }

# Geospatial
geo = { version = "0.28", features = ["serde"] }
geojson = "0.24"
geo-types = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Compression
flate2 = "1.0"
zip = "0.6"

# AWS S3-compatible storage (Cloudflare R2)
aws-config = "1.1"
aws-sdk-s3 = "1.15"

# Async ZIP writing
async-zip = { version = "0.0.16", features = ["tokio"] }

# Parallel processing
rayon = "1.8"
